# obsidian-note-linker

./: .gitignore  Cargo.toml  README.md  manifest.json  package.json  rollup.config.js  rust-toolchain.toml  styles.css  tsconfig.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: create-diagram.yml  release.yml
docs/: dev-docs.md
src/: index.ts  lib.rs  main.ts  settings.ts
src/js/: IgnoreRange.ts  JsNote.ts  LinkMatchSelectionModal.ts  LinkMatcherProgress.ts  Note.ts  objectUtils.ts
src/js/components/: LinkMatchItem.ts  LinkMatchSelectionList.ts  Renderable.ts
src/rs/: mod.rs  util.rs
src/rs/Errors/: cast_error.rs  matching_error.rs  mod.rs
src/rs/links/: mod.rs  normalization.rs
src/rs/matching/: link_finder.rs  link_finder_result.rs  link_match.rs  link_match_target_candidate.rs  link_matcher.rs  link_matching_result.rs  link_target_candidate.rs  mod.rs  note_matching_result.rs  regex_match.rs
src/rs/note/: mod.rs  note.rs  note_scanned_event.rs
src/rs/replacer/: NoteChangeOperationResult.rs  mod.rs  note_change_operation.rs  replacement.rs
src/rs/text/: context_tail.rs  js_note.rs  js_range.rs  link_match.rs  link_match_target.rs  link_matcher.rs  link_target.rs  mod.rs  note.rs  note_link_match_result.rs  note_match.rs  note_match_result.rs  note_scanned_event.rs  range.rs  rs_note.rs  rs_range.rs  text_context.rs  (+3 more)
src/text/: mod.rs  note.rs
src/ts/: IgnoreRange.ts  JsNote.ts  LinkMatchSelectionModal.ts  LinkMatcherProgress.ts  LinkMatchingPopupModal.tsx  MainModal.tsx  Progress.ts  context.ts  hooks.ts  util.ts
(+40 files in other folders)
