[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
chrono = "0.4"
fancy-regex = "0.10.0"
unicode-segmentation = "1.9.0"
thiserror = "1.0.31"
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"