[package]
name = "obsidian-rust-plugin"
version = "0.1.0"
authors = ["Stephen Solka <solka@angel.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.80", features = ["serde-serialize"]}
js-sys = "0.3.57"
chrono = "0.4"
fancy-regex = "0.10.0"
unicode-segmentation = "1.9.0"
thiserror = "1.0.31"
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-futures = "0.4.1"
futures = "0.3.21"
wasm_thread = "0.2.0"
wasm-rs-async-executor = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde-wasm-bindgen = "0.4.3"