[package]
name = "obisidian-note-linker"
version = "1.1.4"
authors = ["Alexander Weichart"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
js-sys = "0.3.57"
fancy-regex = "0.10.0"
unicode-segmentation = "1.9.0"
thiserror = "1.0.31"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
serde-wasm-bindgen = "0.4.3"
